--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  background-color: #333;
+}
+
 .mainContainer {
   display: flex;
   justify-content: center;
@@ -16,11 +20,12 @@
   text-align: center;
   font-size: 32px;
   font-weight: 600;
+  color: #DDDDDD;
 }
 
 .bio {
   text-align: center;
-  color: gray;
+  color: #DDDDDD;
   margin-top: 16px;
 }
 
@@ -30,5 +35,4 @@
   padding: 8px;
   border: 0;
   border-radius: 5px;
-  
 }
